# raspi_voice_assistant

./: main.py  pyproject.toml
notebooks/: 0.test_audio.ipynb  leds.py  main.py  sound_processing.py  wakeup_word.py
notebooks/.ipynb_checkpoints/: 0.test_audio-checkpoint.ipynb
