[project]
name = "raspi-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.2",
    "wyoming>=1.7.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
