[project]
name = "raspi-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apa102-pi>=2.5.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pvporcupine>=3.0.5",
    "pyaudio>=0.2.14",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
    "spidev>=3.7",
    "wyoming>=1.7.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
]
